# hyperion_text_editor

./: Cargo.toml  LICENSE  README.md
.github/worflows/: release.yml
.github/workflows/: release.yml
src/: buffer.rs  cli.rs  config.rs  editor.rs  main.rs  search.rs  syntax.rs  terminal.rs  ui.rs
