[package]
name = "hyperion_text_editor"
version = "0.1.0"
edition = "2024"
authors = ["Alejandro Dip <dip.alejandro.damian@gmail.com>"]
description = "Editor de texto minimalista para terminal"
license = "MIT"
readme = "README.md"
keywords = ["editor", "terminal", "text", "cli"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "hyperion"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
clap = {version = "4.5", features = ["derive"]}
ropey = "1.6.1"
